@@ -7,7 +7,6 @@ import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.UserDbStorage;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,17 +15,20 @@ public class UserService {
     private final UserDbStorage userStorage;
 
     public User create(User user) {
+        validateUser(user);
         return userStorage.add(user);
     }
 
     public User update(User user) {
         getById(user.getId());
+        validateUser(user);
         return userStorage.update(user);
     }
 
     public User getById(int id) {
         return userStorage.getById(id)
-                .orElseThrow(() -> new NotFoundException("Пользователь с id=" + id + " не найден"));
+                .orElseThrow(() ->
+                        new NotFoundException("Пользователь с id=" + id + " не найден"));
     }
 
     public List<User> getAll() {
@@ -51,20 +53,37 @@ public class UserService {
     }
 
     public List<User> getCommonFriends(int userId, int otherId) {
+        getById(userId);
+        getById(otherId);
+
         List<Integer> friends1 = userStorage.getFriends(userId)
                 .stream()
                 .map(User::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Integer> friends2 = userStorage.getFriends(otherId)
                 .stream()
                 .map(User::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         friends1.retainAll(friends2);
 
         return friends1.stream()
                 .map(this::getById)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private void validateUser(User user) {
+        if (user.getLogin() == null || user.getLogin().isBlank()) {
+            throw new IllegalArgumentException("Логин не может быть пустым");
+        }
+
+        if (user.getLogin().contains(" ")) {
+            throw new IllegalArgumentException("Логин не должен содержать пробелы");
+        }
+
+        if (user.getName() == null || user.getName().isBlank()) {
+            user.setName(user.getLogin());
+        }
     }
 }
